# Stremio2Haruna

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  SECURITY.md  configdialog.cpp  configdialog.h  main.cpp  stremio2haruna.cpp  stremio2haruna.h  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
